feat: page first commit

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Serend'Or",
+  "name": "Serend'Or - Amor pela harmonia",
   "icons": [
     {
       "src": "favicon.ico",
